update project structure add kavenegar, mongoose and otp-generator libraries add otp route add otp model add user, otp, product and order controllers add authorization and validation middlewares add otp generator add jwt token generator add SMS sending API add signup with phone number validation feature add login with otp feature

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express-async-handler": "^1.2.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.3.1"
+    "kavenegar": "^1.1.4",
+    "mongoose": "^7.3.1",
+    "otp-generator": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
